<resources>
    <string name="app_name">Rock Paper Scissors Game</string>
    <string name="HumanChoice">Human Choice</string>
    <string name="ComputerChoice">Computer Choice</string>
    <string name="Score">Score: Human 0 AI 0</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="round_no">Let the Battle Begin!</string>
</resources>